--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                   no-underline
                   lg:text-xl
                   smooth-scroll
-                " style="color: #333333" href="landingPage.html">Home</a>
+                " style="color: #333333" href="index.html">Home</a>
             <a class="
                   flex
                   justify-end
@@ -98,7 +98,7 @@
                   focus:bg-gray-200 focus:outline-none focus:shadow-outline
                   no-underline
                   lg:text-xl
-                " style="color: #333333" href="landingPage.html">Skills</a>
+                " style="color: #333333" href="index.html">Skills</a>
             <a class="
                   flex
                   justify-end
@@ -112,7 +112,7 @@
                   focus:bg-gray-200 focus:outline-none focus:shadow-outline
                   no-underline
                   lg:text-xl
-                " style="color: #333333" href="landingPage.html">Portfolio</a>
+                " style="color: #333333" href="index.html">Portfolio</a>
             <a class="
                   flex
                   justify-end
@@ -133,7 +133,7 @@
       </div>
       <!--Back Button-->
       <div>
-        <a href="landingPage.html">
+        <a href="index.html">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 mt-8 group-hover:bg-red-600 md:h-12 md:w-12"
             fill="none" viewBox="0 0 24 24" stroke="#333333">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
