--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               md:items-center md:justify-between md:flex-row
             ">
           <div class="flex flex-row items-center justify-between">
-            <a href="landingPage.html" class="
+            <a href="index.html" class="
                   text-3xl
                   font-bold
                   tracking-widest
