--- a/index.html
+++ b/index.html
@@ -238,11 +238,6 @@
                     cursor-not-allowed
                     filter
                     drop-shadow-lg
-                    transition
-                    duration-300
-                    ease-in-out
-                    transform
-                    hover:-translate-y-1 hover:scale-110
                   " style="background: #7876f7">
                 <a href="#" class="no-underline text-white">Learn More</a>
               </button>
@@ -286,11 +281,6 @@
                     cursor-not-allowed
                     filter
                     drop-shadow-lg
-                    transition
-                    duration-300
-                    ease-in-out
-                    transform
-                    hover:-translate-y-1 hover:scale-110
                   " style="background: #7876f7">
                 <a href="#" class="no-underline text-white">Learn More</a>
               </button>
@@ -326,11 +316,6 @@
                     cursor-not-allowed
                     filter
                     drop-shadow-lg
-                    transition
-                    duration-300
-                    ease-in-out
-                    transform
-                    hover:-translate-y-1 hover:scale-110
                   " style="background: #7876f7">
                 <a href="#" class="no-underline text-white">Learn More</a>
               </button>
@@ -371,6 +356,8 @@
               WVSU CICT's Student Council Election. The application is
               designed using tailwind, allowing for a sleek look overall. It
               also utilizes MongoDB to collect and store all ongoing data.
+
+              <br><br><i>Note: The application is closed as of the moment.</i>
             </p>
             <div class="mt-4 grid grid-cols-2 gap-4">
               <a href="http://www.pollice.ml/" class="
@@ -485,45 +472,8 @@
               </a>
             </div>
           </div>
-          <div id="carouselExampleCaptions" class="carousel slide py-4 flex items-center" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner rounded-sm md:rounded-xl">
-              <div class="carousel-item active">
-                <img src="img/2.PNG" class="d-block w-100" alt="..." />
-                <div class="carousel-caption d-none d-md-block">
-                  <!--Caption-->
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="img/4.PNG" class="d-block w-100" alt="..." />
-                <div class="carousel-caption d-none d-md-block">
-                  <!--Caption-->
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="img/5.PNG" class="d-block w-100" alt="..." />
-                <div class="carousel-caption d-none d-md-block">
-                  <!--Caption-->
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-              data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-              data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+          <div class="flex items-center">
+            <img src="img/DC Image.png" alt="" srcset="">
           </div>
           <div class="
                 shadow-2xl
@@ -563,14 +513,6 @@
                     flex
                     justify-center
                   " style="color: #7876f7">Check it out</a>
-              <a href="https://github.com/JedAdrianDenosta/pollice" class="flex justify-end items-center text-white">
-                <svg class="w-7 h-7" style="color: white" viewBox="0 0 24 24" fill="currentColor"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M12.026 2C7.13295 1.99937 2.96183 5.54799 2.17842 10.3779C1.395 15.2079 4.23061 19.893 8.87302 21.439C9.37302 21.529 9.55202 21.222 9.55202 20.958C9.55202 20.721 9.54402 20.093 9.54102 19.258C6.76602 19.858 6.18002 17.92 6.18002 17.92C5.99733 17.317 5.60459 16.7993 5.07302 16.461C4.17302 15.842 5.14202 15.856 5.14202 15.856C5.78269 15.9438 6.34657 16.3235 6.66902 16.884C6.94195 17.3803 7.40177 17.747 7.94632 17.9026C8.49087 18.0583 9.07503 17.99 9.56902 17.713C9.61544 17.207 9.84055 16.7341 10.204 16.379C7.99002 16.128 5.66202 15.272 5.66202 11.449C5.64973 10.4602 6.01691 9.5043 6.68802 8.778C6.38437 7.91731 6.42013 6.97325 6.78802 6.138C6.78802 6.138 7.62502 5.869 9.53002 7.159C11.1639 6.71101 12.8882 6.71101 14.522 7.159C16.428 5.868 17.264 6.138 17.264 6.138C17.6336 6.97286 17.6694 7.91757 17.364 8.778C18.0376 9.50423 18.4045 10.4626 18.388 11.453C18.388 15.286 16.058 16.128 13.836 16.375C14.3153 16.8651 14.5612 17.5373 14.511 18.221C14.511 19.555 14.499 20.631 14.499 20.958C14.499 21.225 14.677 21.535 15.186 21.437C19.8265 19.8884 22.6591 15.203 21.874 10.3743C21.089 5.54565 16.9181 1.99888 12.026 2Z"
-                    fill="#2E3A59"></path>
-                </svg>
-              </a>
             </div>
           </div>
         </div>
@@ -673,7 +615,6 @@
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
-  <script src="index.js"></script>
 </body>
 
 </html>
