--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <title>Jed Adrian Denosta</title>
 </head>
-
+<!-- Path: index.html -->
 <body>
   <div class="bg-white texture-bg" style="color: #333333; scroll-behavior: smooth">
     <canvas class="connecting-dots"></canvas>
