--- a/about.html
+++ b/about.html
@@ -8,7 +8,8 @@
   <link rel="Logo Icon" href="img/Logo.png" />
   <link rel="stylesheet" href="public/css/tailwind.css">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <title>About</title>
 </head>
 
@@ -28,8 +29,8 @@
               mx-auto
               md:items-center md:justify-between md:flex-row
             ">
-            <div class="flex flex-row items-center justify-between">
-              <a href="index.html" class="
+          <div class="flex flex-row items-center justify-between">
+            <a href="index.html" class="
                     text-3xl
                     font-bold
                     tracking-widest
@@ -42,21 +43,21 @@
                     w-48
                     lg:w-auto
                   " style="color: #5ed8fa">jed adrian</a>
-              <button class="
+            <button class="
                     md:hidden
                     rounded-lg
                     focus:outline-none focus:shadow-outline
                   " @click="open = !open">
-                <svg fill="currentColor" viewBox="0 0 20 20" class="w-8 h-8 mb-4">
-                  <path x-show="!open" fill-rule="evenodd"
-                    d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM9 15a1 1 0 011-1h6a1 1 0 110 2h-6a1 1 0 01-1-1z"
-                    clip-rule="evenodd"></path>
-                  <path x-show="open" fill-rule="evenodd"
-                    d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                    clip-rule="evenodd"></path>
-                </svg>
-              </button>
-            </div>
+              <svg fill="currentColor" viewBox="0 0 20 20" class="w-8 h-8 mb-4">
+                <path x-show="!open" fill-rule="evenodd"
+                  d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM9 15a1 1 0 011-1h6a1 1 0 110 2h-6a1 1 0 01-1-1z"
+                  clip-rule="evenodd"></path>
+                <path x-show="open" fill-rule="evenodd"
+                  d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                  clip-rule="evenodd"></path>
+              </svg>
+            </button>
+          </div>
           <nav :class="{'flex': open, 'hidden': !open}" class="
                 flex-col
                 justify-end
@@ -138,8 +139,9 @@
       </div>
       <!--Back Button-->
       <div class="flex items-end mx-auto py-6">
-        <a href="index.html" class="flex items-end no-underline justify-center group-hover:text-indigo-500" >
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-gray-700 hover:-rotate-90 hover:text-indigo-400 stroke-current stroke-2 md:h-12 md:w-12"
+        <a href="index.html" class="flex items-end no-underline justify-center group-hover:text-indigo-500">
+          <svg xmlns="http://www.w3.org/2000/svg"
+            class="h-8 w-8 text-gray-700 hover:-rotate-90 hover:text-indigo-400 stroke-current stroke-2 md:h-12 md:w-12"
             fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
           </svg>
@@ -148,12 +150,14 @@
       <!--Profile Section-->
       <div class="grid grid-row-3 gap-5 py-6 md:py-10 md:grid md:grid-cols-3 m-auto w-auto">
         <!--Picture and data-->
-        <div class="bg-white rounded-md md:rounded-2xl shadow-xl w-full h-full relative m-auto space-y-5 p-4 md:place-content-start">
+        <div
+          class="bg-white rounded-md md:rounded-2xl shadow-xl w-full h-full relative m-auto space-y-5 p-4 md:place-content-start">
           <img class="rounded-xl" src="img/myProfile.jpg" alt="">
           <h1 class="text-lg font-extrabold text-indigo-400">Jed Adrian Denosta</h1>
           <p class="text-sm text-gray-500">Photographer / UX and UI Designer / Web Developer</p>
           <p class="text-sm font-normal text-gray-600">
-            Jed believes that design must solve a need, stir a desire for involvement, and shed light on a path that is enjoyable, trustworthy, and human.
+            Jed believes that design must solve a need, stir a desire for involvement, and shed light on a path that is
+            enjoyable, trustworthy, and human.
           </p>
           <p class="text-base font-medium text-gray-700">
             Connect with him! You’ll find him contact details down below.
@@ -163,7 +167,8 @@
           </p>
           <!--Social Media-->
           <div class="flex flex-row space-x-5 py-3">
-            <a href="https://www.facebook.com/jedadrian.denosta" class="text-gray-500 hover:text-indigo-400 no-underline">
+            <a href="https://www.facebook.com/jedadrian.denosta"
+              class="text-gray-500 hover:text-indigo-400 no-underline">
               <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 md:w-6 md:h-6" fill="currentColor"
                 class="bi bi-facebook" viewBox="0 0 16 16">
                 <path
@@ -179,33 +184,47 @@
               </svg>
             </a>
             <a href="https://twitter.com/jedadriannn" class="text-gray-500 hover:text-indigo-400 no-underline">
-              <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 md:w-6 md:h-6" fill="currentColor" class="bi bi-twitter"
-                viewBox="0 0 16 16">
+              <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 md:w-6 md:h-6" fill="currentColor"
+                class="bi bi-twitter" viewBox="0 0 16 16">
                 <path
                   d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z" />
               </svg>
             </a>
           </div>
         </div>
-        
-        <div class="bg-white rounded-md md:rounded-2xl shadow-xl w-full h-full relative m-auto space-y-8 p-5 md:col-span-2 md:place-content-start">
+
+        <div
+          class="bg-white rounded-md md:rounded-2xl shadow-xl w-full h-full relative m-auto space-y-8 p-5 md:col-span-2 md:place-content-start">
           <h1 class="text-indigo-500 text-2xl font-extrabold">My Story</h1>
           <div class="text-gray-600 space-y-6">
             <p>
 
-I love to work with User Interfaces design likewise to User Experience to uphold a strong experience for the users, and I deem that it brings greatness to the interface of the particular product also brings a sense of encouragement to one user and another. Web Development has been also my peek of interest in that it aids a complex problem into a simpler one that it connects tons of users on the internet. Lastly, I am a photographer that co-founded the DC Portraitures that aims to give quality assurance to clients and satisfying result.
+              I love to work with User Interfaces design likewise to User Experience to uphold a strong experience for
+              the users, and I deem that it brings greatness to the interface of the particular product also brings a
+              sense of encouragement to one user and another. Web Development has been also my peek of interest in that
+              it aids a complex problem into a simpler one that it connects tons of users on the internet. Lastly, I am
+              a photographer that co-founded the DC Portraitures that aims to give quality assurance to clients and
+              satisfying result.
             </p>
             <p>
-              Having worked freelance in multiple user interface projects, I knew the pain of designing without prior business and user knowledge. Often, I presented my final design to the upper management and received never-ending feedback and iterations. 
+              Having worked freelance in multiple user interface projects, I knew the pain of designing without prior
+              business and user knowledge. Often, I presented my final design to the upper management and received
+              never-ending feedback and iterations.
             </p>
             <p>
-              Having worked freelance in multiple user interface projects, I knew the pain of designing without prior business and user knowledge. Often, I presented my final design to the upper management and received never-ending feedback and iterations. 
+              Having worked freelance in multiple user interface projects, I knew the pain of designing without prior
+              business and user knowledge. Often, I presented my final design to the upper management and received
+              never-ending feedback and iterations.
             </p>
             <p>
-              Having worked freelance in multiple user interface projects, I knew the pain of designing without prior business and user knowledge. Often, I presented my final design to the upper management and received never-ending feedback and iterations. 
+              Having worked freelance in multiple user interface projects, I knew the pain of designing without prior
+              business and user knowledge. Often, I presented my final design to the upper management and received
+              never-ending feedback and iterations.
             </p>
             <p>
-              Having worked freelance in multiple user interface projects, I knew the pain of designing without prior business and user knowledge. Often, I presented my final design to the upper management and received never-ending feedback and iterations. 
+              Having worked freelance in multiple user interface projects, I knew the pain of designing without prior
+              business and user knowledge. Often, I presented my final design to the upper management and received
+              never-ending feedback and iterations.
             </p>
           </div>
         </div>
@@ -245,8 +264,8 @@ I love to work with User Interfaces design likewise to User Experience to uphold
               </svg>
             </a>
             <a href="https://twitter.com/jedadriannn" class="text-gray-300 hover:text-white no-underline">
-              <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 md:w-6 md:h-6" fill="currentColor" class="bi bi-twitter"
-                viewBox="0 0 16 16">
+              <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 md:w-6 md:h-6" fill="currentColor"
+                class="bi bi-twitter" viewBox="0 0 16 16">
                 <path
                   d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z" />
               </svg>
