--- a/about.html
+++ b/about.html
@@ -226,12 +226,36 @@
               business and user knowledge. Often, I presented my final design to the upper management and received
               never-ending feedback and iterations.
             </p>
+            <p>
+              Having worked freelance in multiple user interface projects, I knew the pain of designing without prior
+              business and user knowledge. Often, I presented my final design to the upper management and received
+              never-ending feedback and iterations.
+            </p>
+            <p>
+              Having worked freelance in multiple user interface projects, I knew the pain of designing without prior
+              business and user knowledge. Often, I presented my final design to the upper management and received
+              never-ending feedback and iterations.
+            </p>
+            <p>
+              Having worked freelance in multiple user interface projects, I knew the pain of designing without prior
+              business and user knowledge. Often, I presented my final design to the upper management and received
+              never-ending feedback and iterations.
+            </p>
+            <p>
+              Having worked freelance in multiple user interface projects, I knew the pain of designing without prior
+              business and user knowledge. Often, I presented my final design to the upper management and received
+              never-ending feedback and iterations.
+            </p>
+            <p>
+              Having worked freelance in multiple user interface projects, I knew the pain of designing without prior
+              business and user knowledge. Often, I presented my final design to the upper management and received
+              never-ending feedback and iterations.
+            </p>
           </div>
         </div>
-
       </div>
-
     </div>
+    <!--- End of About Section -->
     <footer class="
         px-14
         py-14
