--- a/index.html
+++ b/index.html
@@ -165,7 +165,6 @@
                     flex
                     justify-start
                     font-bold
-                    tracking-wider
                     md:text-7xl
                     lg:text-8xl
                   " style="z-index: 30">
@@ -207,7 +206,7 @@
     <section id="skills" class="p-12 sm:p-20 lg:px-32 lg:py-28" style="background: #eeeffe">
       <div class="flex flex-col justify-center py-4">
         <h1 class="text-4xl font-bold mb-10" style="color: #262961">
-          Here are my skills...
+          Here are my skills
         </h1>
         <div class="flex flex-row justify-center">
           <div class="grid grid-row-3 gap-20 lg:grid lg:grid-cols-3 lg:gap-20">
@@ -226,7 +225,7 @@
                 <h1 class="font-bold text-xl md:text-2xl">Photography</h1>
               </div>
               <div class="flex flex-row justify-start">
-                <p class="text-sm w-64 text-justify font-light lg:text-base lg:w-80">
+                <p class="text-sm w-64 font-light lg:text-base lg:w-80">
                   I am a student Photographer, founder of DC Portraitures. Aim
                   to bring smile in your face at your best moment.
                 </p>
@@ -269,7 +268,7 @@
                 </h1>
               </div>
               <div class="flex flex-row justify-start">
-                <p class="text-sm w-64 text-justify font-light lg:text-base lg:w-80">
+                <p class="text-sm w-64 font-light lg:text-base lg:w-80">
                   I am an aspiring UX and UI Designer that promotes better
                   user experience and quality to users.
                 </p>
@@ -300,13 +299,13 @@
               <img class="w-80" src="img/WebDev.svg" alt="" />
               <div class="flex flex-row justify-start">
                 <h1 class="font-bold text-xl md:text-2xl">
-                  UX and UI Design
+                  Web Development
                 </h1>
               </div>
               <div class="flex flex-row justify-start">
-                <p class="text-sm w-64 text-justify font-light lg:text-base lg:w-80">
+                <p class="text-sm w-64 font-light lg:text-base lg:w-80">
                   An aspiring student web developer that aims to bring quality
-                  assurance to clients and easy user-experience.
+                  assurance to customers and tangible user experience.
                 </p>
               </div>
               <button class="
@@ -346,7 +345,7 @@
               Pollice
             </h1>
             <p class="
-                  text-xs text-justify
+                  text-xs
                   font-light
                   tracking-wider
                   leading-normal
@@ -440,17 +439,16 @@
               DC Portraitures
             </h1>
             <p class="
-                  text-xs text-justify
+                  text-xs
                   font-light
                   tracking-wider
                   leading-normal
                   md:text-sm
                   lg:text-sm
                 ">
-              DC Portraitures is an artist group that helps bring memories of
-              the clients to have golden times. The said group is composed of
-              aspiring Photographers, Make-up Artist, and Design Production
-              individuals. The group provides sound services to people.
+              DC Portraitures is an artist group that helps bring memories of the customers to have golden moments. DC
+              Portraitures is composed of Photographers, Make-up Artist, and Design Production individuals. The group
+              renders a belle moment with their quality services.
             </p>
             <div class="mt-4 grid grid-cols-2 gap-4">
               <a href="https://www.facebook.com/dcportraitures/?ref=pages_you_manage" class="
@@ -474,7 +472,7 @@
               </a>
             </div>
           </div>
-          <div class="flex items-center">
+          <div class="flex items-center justify-center py-4">
             <img src="img/DC Image.png" alt="" srcset="">
           </div>
           <div class="
@@ -491,7 +489,7 @@
               DC Portraitures
             </h1>
             <p class="
-                  text-xs text-justify
+                  text-xs
                   font-light
                   tracking-wider
                   leading-normal
