--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
           class="bg-white rounded-md md:rounded-2xl shadow-xl w-full h-full relative m-auto space-y-5 p-4 md:place-content-start">
           <img class="rounded-xl" src="img/myProfile.jpg" alt="">
           <h1 class="text-lg font-extrabold text-indigo-400">Jed Adrian Denosta</h1>
-          <p class="text-sm text-gray-500">Photographer / UX and UI Designer / Web Developer</p>
+          <p class="text-sm text-gray-500">Photographer / UX and UI Designer / Web Designer and Developer</p>
           <p class="text-sm font-normal text-gray-600">
             Jed believes that design must solve a need, stir a desire for involvement, and shed light on a path that is
             enjoyable, trustworthy, and human.
